--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
   "name": "x_backend",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module",
+  "license": "MIT",
   "scripts": {
     "dev": "vercel dev",
-    "build": "tsc"
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "dependencies": {
     "@vercel/node": "^3.2.0"
   },
   "devDependencies": {
+    "@types/node": "^18.19.86",
     "typescript": "^5.0.0"
   }
 }
