--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,13 @@
 {
     "compilerOptions": {
       "target": "ES2020",
-      "module": "ES2020",
-      "moduleResolution": "node",
-      "esModuleInterop": true,
+      "module": "commonjs",
+      "lib": ["ES2020"],
       "outDir": "dist",
-      "strict": true
+      "strict": true,
+      "esModuleInterop": true,
+      "skipLibCheck": true
     },
-    "include": ["api"]
+    "include": ["api/**/*.ts"]
   }
   
